--- a/package.json
+++ b/package.json
@@ -1,17 +1,36 @@
 {
-  "name": "vue3_cli_default",
-  "version": "0.0.0",
+  "name": "campus_help",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^3.2.8"
+    "axios": "^1.6.5",
+    "boqii-modal": "^1.1.4",
+    "core-js": "^3.6.5",
+    "element-ui": "^2.15.8",
+    "js-md5": "^0.7.3",
+    "nprogress": "^0.2.0",
+    "vant": "^2.12.18",
+    "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.6.0",
-    "@vue/compiler-sfc": "^3.2.6",
-    "vite": "^2.5.2"
-  }
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "less": "^3.0.4",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
