--- a/package.json
+++ b/package.json
@@ -7,23 +7,21 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.6.5",
-    "boqii-modal": "^1.1.4",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "element-ui": "^2.15.8",
+    "element-ui": "^2.15.1",
     "js-md5": "^0.7.3",
     "nprogress": "^0.2.0",
     "vant": "^2.12.18",
     "vue": "^2.6.11",
-    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-router": "^5.0.8",
-    "@vue/cli-plugin-vuex": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
